feat: S3 setup + improvement to AI engine + UI/UX
- Added AWS S3 configuration variables to .env.example for image uploads.
- Introduced a new AI proposal document outlining a checkers AI system inspired by Chinook, detailing its features and user satisfaction metrics.
- Removed obsolete 3D background usage guide.
- Updated package dependencies to include AWS SDK for S3.
- Added multiple test scripts for game mechanics and board configurations.
- Enhanced user profile schema in Prisma to include avatar fields.
- Added various audio files for game sounds and notifications.

--- a/.env.example
+++ b/.env.example
@@ -17,7 +17,9 @@ DISCORD_CLIENT_SECRET=""
 RESEND_API_KEY=""
 RESEND_FROM_EMAIL="noreply@yourdomain.com"
 
-# Upload (optional for profile pictures)
-# Using uploadthing or similar service
-UPLOADTHING_SECRET=""
-UPLOADTHING_APP_ID=""
+# AWS S3 / Tigris (for image uploads)
+AWS_ACCESS_KEY_ID=""
+AWS_SECRET_ACCESS_KEY=""
+AWS_REGION="auto"
+AWS_S3_BUCKET=""
+AWS_S3_ENDPOINT="https://fly.storage.tigris.dev"
