--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@auth/prisma-adapter": "^2.10.0",
     "@aws-sdk/client-s3": "^3.883.0",
     "@aws-sdk/s3-request-presigner": "^3.883.0",
+    "@emotion/is-prop-valid": "^1.4.0",
     "@hookform/resolvers": "^5.2.1",
     "@prisma/client": "^6.5.0",
     "@radix-ui/react-alert-dialog": "^1.1.15",
@@ -89,6 +90,8 @@
     "@vitejs/plugin-react": "^5.0.2",
     "@vitest/coverage-v8": "^3.2.4",
     "@vitest/ui": "^3.2.4",
+    "commitizen": "^4.3.0",
+    "cz-git": "^1.10.1",
     "eslint": "^9.23.0",
     "eslint-config-next": "^15.2.3",
     "happy-dom": "^18.0.1",
@@ -106,6 +109,11 @@
     "typescript": "^5.8.2",
     "typescript-eslint": "^8.27.0",
     "vitest": "^3.2.4"
+  },
+  "config": {
+    "commitizen": {
+      "path": "cz-git"
+    }
   },
   "ct3aMetadata": {
     "initVersion": "7.39.3"
