chore: update ESLint configuration and add unused imports plugin
- Enhanced ESLint configuration by adding global ignores for `.next` and `node_modules`.
- Integrated `eslint-plugin-unused-imports` to manage unused imports automatically.
- Updated TypeScript rules to disable the core `no-unused-vars` rule in favor of the new plugin.
- Refined naming conventions and linter options for better code quality and maintainability.
- Updated `package.json` to include the new plugin dependency.

--- a/package.json
+++ b/package.json
@@ -94,6 +94,7 @@
     "cz-git": "^1.10.1",
     "eslint": "^9.23.0",
     "eslint-config-next": "^15.2.3",
+    "eslint-plugin-unused-imports": "^4.2.0",
     "happy-dom": "^18.0.1",
     "husky": "^9.1.7",
     "lint-staged": "^16.1.6",
