docs: update readme + segregate LLM scratch notes

--- a/.env.example
+++ b/.env.example
@@ -1,28 +1,40 @@
+# Environment Configuration
+# Copy this file to .env and fill in your actual values
+# Note: SKIP_ENV_VALIDATION=true can be used to skip validation during build
+
+# Node Environment
+NODE_ENV="development"
+
 # Prisma Database Configuration
 # For local development (SQLite)
 DATABASE_URL="file:./db.sqlite"
-
 # For production (Vercel Postgres) - set in Vercel dashboard
 # DATABASE_URL="postgres://username:password@host:port/database"
 
-# NextAuth
-# You can generate a new secret on the command line with:
-# openssl rand -base64 32
+# NextAuth Configuration
+# Generate a secret with: openssl rand -base64 32
 # https://next-auth.js.org/configuration/options#secret
 NEXTAUTH_SECRET=""
+# Will use VERCEL_URL automatically in Vercel deployments
 NEXTAUTH_URL="http://localhost:3000"
 
-# Discord OAuth
+# Discord OAuth Provider
+# Get these from Discord Developer Portal
 DISCORD_CLIENT_ID=""
 DISCORD_CLIENT_SECRET=""
 
-# Email (Resend)
+# Email Service (Resend)
+# Get API key from https://resend.com
 RESEND_API_KEY=""
 RESEND_FROM_EMAIL="noreply@yourdomain.com"
 
-# AWS S3 / Tigris (for image uploads)
+# AWS S3 / Tigris Storage (for image uploads)
+# For Tigris (Fly.io): https://fly.io/docs/reference/tigris/
 AWS_ACCESS_KEY_ID=""
 AWS_SECRET_ACCESS_KEY=""
 AWS_REGION="auto"
 AWS_S3_BUCKET=""
 AWS_S3_ENDPOINT="https://fly.storage.tigris.dev"
+
+# Development Options
+# SKIP_ENV_VALIDATION=true
