feat(db): add Docker Compose configuration for PostgreSQL
- Introduced a new `docker-compose.yml` file to manage PostgreSQL service.
- Added scripts in `package.json` for database operations: `db:up`, `db:down`, `db:logs`, and `db:reset`.
- Enhanced the game seeding script to support comprehensive game history with improved player interactions and statistics tracking.

This setup streamlines local development and testing with PostgreSQL.

--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
     "db:seed:games": "tsx prisma/seed-games.ts",
     "db:seed:all": "tsx prisma/seed.ts && tsx prisma/seed-games.ts",
     "db:studio": "prisma studio",
+    "db:up": "docker-compose up -d postgres",
+    "db:down": "docker-compose down",
+    "db:logs": "docker-compose logs -f postgres",
+    "db:reset": "docker-compose down -v && docker-compose up -d postgres",
     "dev": "next dev --turbo",
     "format:check": "prettier --check \"**/*.{ts,tsx,js,jsx,mdx}\" --cache",
     "format:write": "prettier --write \"**/*.{ts,tsx,js,jsx,mdx}\" --cache",
